@@ -25,7 +25,7 @@ public class ApplicationForLeaveStatisticsPageRequest extends AbstractPageReques
     /**
      * {@link ApplicationForLeaveStatisticsPageRequest} implementation to represent the absence of pagination information.
      */
-    public static class ApplicationForLeaveStatisticsPageRequestUnpaged extends ApplicationForLeaveStatisticsPageRequest {
+    public static final class ApplicationForLeaveStatisticsPageRequestUnpaged extends ApplicationForLeaveStatisticsPageRequest {
         private ApplicationForLeaveStatisticsPageRequestUnpaged() {
             super(0, 1);
         }
@@ -120,6 +120,6 @@ public class ApplicationForLeaveStatisticsPageRequest extends AbstractPageReques
 
     @Override
     public String toString() {
-        return String.format("Page request [number: %d, size %d, sort: %s]", getPageNumber(), getPageSize(), getSort());
+        return "Page request [number: %d, size %d, sort: %s]".formatted(getPageNumber(), getPageSize(), getSort());
     }
 }
