@@ -34,7 +34,7 @@ public class PersonPageRequest extends AbstractPageRequest implements PersonPage
     /**
      * {@link PersonPageRequest} implementation to represent the absence of pagination information.
      */
-    public static class PersonPageRequestUnpaged extends PersonPageRequest {
+    public static final class PersonPageRequestUnpaged extends PersonPageRequest {
         private PersonPageRequestUnpaged() {
             super(0, 1);
         }
@@ -171,6 +171,6 @@ public class PersonPageRequest extends AbstractPageRequest implements PersonPage
 
     @Override
     public String toString() {
-        return String.format("Page request [number: %d, size %d, sort: %s]", getPageNumber(), getPageSize(), getSort());
+        return "Page request [number: %d, size %d, sort: %s]".formatted(getPageNumber(), getPageSize(), getSort());
     }
 }
