@@ -157,8 +157,8 @@ public class SickDaysOverviewViewController implements HasLaunchpad {
     private static List<HtmlOptionDto> sortOptionDto(String propertyPrefix, String property, Sort.Order order) {
         final String prefix = hasText(propertyPrefix) ? propertyPrefix + "." : "";
         return List.of(
-            new HtmlOptionDto(String.format("sicknotes.statistics.sort.%s.asc", property), prefix + property + ",asc", order != null && order.isAscending()),
-            new HtmlOptionDto(String.format("sicknotes.statistics.sort.%s.desc", property), prefix + property + ",desc", order != null && order.isDescending())
+            new HtmlOptionDto("sicknotes.statistics.sort.%s.asc".formatted(property), prefix + property + ",asc", order != null && order.isAscending()),
+            new HtmlOptionDto("sicknotes.statistics.sort.%s.desc".formatted(property), prefix + property + ",desc", order != null && order.isDescending())
         );
     }
 
