@@ -103,9 +103,8 @@ class ApplicationCommentServiceImplTest {
         final ArgumentCaptor<ApplicationCommentEntity> captor = ArgumentCaptor.forClass(ApplicationCommentEntity.class);
         verify(commentRepository).save(captor.capture());
 
-        assertThat(captor.getValue()).satisfies(persistedComment -> {
-            assertThat(persistedComment.getText()).isEqualTo("Foo");
-        });
+        assertThat(captor.getValue()).satisfies(persistedComment ->
+            assertThat(persistedComment.getText()).isEqualTo("Foo"));
     }
 
     @Test
@@ -129,7 +128,7 @@ class ApplicationCommentServiceImplTest {
 
         final ArgumentCaptor<List<ApplicationCommentEntity>> argument = ArgumentCaptor.forClass(List.class);
         verify(commentRepository).saveAll(argument.capture());
-        assertThat(argument.getValue().get(0).getPerson()).isNull();
+        assertThat(argument.getValue().getFirst().getPerson()).isNull();
     }
 
     @Test
