@@ -69,9 +69,9 @@ class CalendarAbsenceServiceImplTest {
 
         final List<CalendarAbsence> openAbsences = sut.getOpenAbsencesSince(List.of(person), since);
         assertThat(openAbsences).hasSize(2);
-        assertThat(openAbsences.get(0).getPerson()).isEqualTo(person);
-        assertThat(openAbsences.get(0).getStartDate()).isEqualTo(ZonedDateTime.parse("2019-12-10T00:00Z[Etc/UTC]"));
-        assertThat(openAbsences.get(0).getEndDate()).isEqualTo(ZonedDateTime.parse("2019-12-24T00:00Z[Etc/UTC]"));
+        assertThat(openAbsences.getFirst().getPerson()).isEqualTo(person);
+        assertThat(openAbsences.getFirst().getStartDate()).isEqualTo(ZonedDateTime.parse("2019-12-10T00:00Z[Etc/UTC]"));
+        assertThat(openAbsences.getFirst().getEndDate()).isEqualTo(ZonedDateTime.parse("2019-12-24T00:00Z[Etc/UTC]"));
         assertThat(openAbsences.get(1).getPerson()).isEqualTo(person);
         assertThat(openAbsences.get(1).getStartDate()).isEqualTo(ZonedDateTime.parse("2019-10-10T00:00Z[Etc/UTC]"));
         assertThat(openAbsences.get(1).getEndDate()).isEqualTo(ZonedDateTime.parse("2019-10-24T00:00Z[Etc/UTC]"));
@@ -102,9 +102,9 @@ class CalendarAbsenceServiceImplTest {
 
         final List<CalendarAbsence> openAbsences = sut.getOpenAbsencesSince(since);
         assertThat(openAbsences).hasSize(2);
-        assertThat(openAbsences.get(0).getPerson()).isEqualTo(person);
-        assertThat(openAbsences.get(0).getStartDate()).isEqualTo(ZonedDateTime.parse("2019-11-10T00:00Z[Etc/UTC]"));
-        assertThat(openAbsences.get(0).getEndDate()).isEqualTo(ZonedDateTime.parse("2019-11-24T00:00Z[Etc/UTC]"));
+        assertThat(openAbsences.getFirst().getPerson()).isEqualTo(person);
+        assertThat(openAbsences.getFirst().getStartDate()).isEqualTo(ZonedDateTime.parse("2019-11-10T00:00Z[Etc/UTC]"));
+        assertThat(openAbsences.getFirst().getEndDate()).isEqualTo(ZonedDateTime.parse("2019-11-24T00:00Z[Etc/UTC]"));
         assertThat(openAbsences.get(1).getPerson()).isEqualTo(person);
         assertThat(openAbsences.get(1).getStartDate()).isEqualTo(ZonedDateTime.parse("2019-10-10T00:00Z[Etc/UTC]"));
         assertThat(openAbsences.get(1).getEndDate()).isEqualTo(ZonedDateTime.parse("2019-10-24T00:00Z[Etc/UTC]"));
