@@ -48,7 +48,7 @@ class CsvExportServiceTest {
             @Override
             public void write(FilterPeriod period, Locale locale, List<String> data, CSVWriter csvWriter) {
                 final String[] row = new String[data.size()];
-                row[0] = data.get(0);
+                row[0] = data.getFirst();
                 row[1] = data.get(1);
                 csvWriter.writeNext(row);
             }
@@ -70,7 +70,7 @@ class CsvExportServiceTest {
         final CsvExportService<String> sut = new CsvExportService<>() {
             @Override
             public void write(FilterPeriod period, Locale locale, List<String> data, CSVWriter csvWriter) {
-                csvWriter.writeNext(new String[]{data.get(0)});
+                csvWriter.writeNext(new String[]{data.getFirst()});
 
             }
 
