@@ -182,6 +182,6 @@ class SickDaysDetailedStatisticsCsvExportServiceTest {
     }
 
     private void addMessageSource(String key, Locale locale) {
-        when(messageSource.getMessage(eq(key), any(), eq(locale))).thenReturn(String.format("{%s}", key));
+        when(messageSource.getMessage(eq(key), any(), eq(locale))).thenReturn("{%s}".formatted(key));
     }
 }
